syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "ResourceFetchStatusFailureStub";
package vire.cms;

import "vire/utility/BasePayload.proto";
import "vire/utility/ModelIdentifier.proto";
import "vire/utility/InvalidContextError.proto";
import "vire/cms/InvalidResourceError.proto";

message ResourceFetchStatusFailure {

  vire.utility.BasePayload _base = 1;

  vire.utility.ModelIdentifier error_type_id = 100;
  oneof error_oneof {
    vire.utility.InvalidContextError invalid_context  = 101;
    vire.cms.InvalidResourceError    invalid_resource = 102;
  }

}